--- a/src/app/core/modules/forms/checkbox-element/checkbox-element.component.html
+++ b/src/app/core/modules/forms/checkbox-element/checkbox-element.component.html
@@ -1,15 +1,16 @@
 <mat-checkbox
-  [formControl]="control"
-  [required]="element.required || false"
-  [disabled]="element.disabled || false"
-  [hidden]="element.hidden || false"
+  [formControl]="control()"
+  [required]="element().required || false"
+  [disabled]="element().disabled || false"
+  [hidden]="element().hidden || false"
 >
-  {{ element.label }}
+  {{ element().label }}
 </mat-checkbox>
-@if(element.hint){
-<mat-hint>{{ element.hint }}</mat-hint>
-} @if(control.errors){
-<mat-error>
-  <sc-error [element]="element" [errors]="control.errors"></sc-error>
-</mat-error>
+@if (element().hint) {
+  <mat-hint>{{ element().hint }}</mat-hint>
+}
+@if (control().errors) {
+  <mat-error>
+    <sc-error [element]="element()" [errors]="control().errors"></sc-error>
+  </mat-error>
 }
