--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,36 +2,35 @@
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
 @import 'variables';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 // Plus imports for other components in your app.
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
-@include mat.core();
+@include mat.elevation-classes();
+@include mat.app-background();
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$School-Compass-365-fe-primary: mat.define-palette(mat.$indigo-palette);
-$School-Compass-365-fe-accent: mat.define-palette(
-  mat.$pink-palette,
-  A200,
-  A100,
-  A400
-);
+$School-Compass-365-fe-primary: mat.m2-define-palette(mat.$m2-indigo-palette);
+$School-Compass-365-fe-accent: mat.m2-define-palette(mat.$m2-pink-palette, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$School-Compass-365-fe-warn: mat.define-palette(mat.$red-palette);
+$School-Compass-365-fe-warn: mat.m2-define-palette(mat.$m2-red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$School-Compass-365-fe-theme: mat.define-light-theme(
+$School-Compass-365-fe-theme: mat.m2-define-light-theme(
   (
     color: (
       primary: $School-Compass-365-fe-primary,
       accent: $School-Compass-365-fe-accent,
       warn: $School-Compass-365-fe-warn,
     ),
-    typography: mat.define-typography-config(),
+    typography: mat.m2-define-typography-config(),
     density: 0,
   )
 );
@@ -56,9 +55,106 @@ mat-icon {
 }
 .mdc-text-field--filled:not(.mdc-text-field--disabled),
 .mdc-text-field--focused {
-  background-color: transparent !important;
+  border: 1px solid #80808017;
+  border-radius: 10px;
 }
 .mat-mdc-form-field.mat-focused .mat-mdc-form-field-focus-overlay,
 .mat-mdc-text-field-wrapper:hover .mat-mdc-form-field-focus-overlay {
   opacity: 0 !important;
+}
+
+div.seperator {
+  width: calc(100% - 1rem);
+  margin: 0 0.5rem;
+  height: 0px;
+  border-width: 0;
+  border-top-width: 1px;
+  border-color: var(--neutral-300);
+  border-style: solid;
+}
+
+// mat tab
+.mat-mdc-tab.mdc-tab--active .mdc-tab__ripple::before {
+  background-color: var(--primary-400) !important;
+}
+
+.mat-mdc-tab.mdc-tab--active .mdc-tab__text-label {
+  color: var(--primary-550) !important;
+}
+
+.mat-mdc-tab .mdc-tab-indicator__content--underline {
+  border-color: var(--primary-550) !important;
+}
+
+.mat-focused .mat-mdc-select-arrow svg {
+  fill: var(--primary-550);
+}
+.mat-mdc-option {
+  max-height: 40px;
+  min-height: 40px !important;
+}
+div.mat-mdc-select-panel {
+  border-radius: 0.8rem;
+}
+.mat-mdc-option .mdc-list-item__primary-text {
+  white-space: nowrap;
+}
+.mat-mdc-unelevated-button.mat-primary:not(:disabled) {
+  background-color: var(--primary-550)
+}
+.mdc-tab--active .mdc-tab__text-label {
+  font-weight: bolder;
+}
+.mdc-tab-indicator__content.mdc-tab-indicator__content--underline {
+  border-bottom-width: 1px;
+}
+button.mdc-button {
+  border-radius: 7px;
+}
+mat-label {
+  font-weight: 600;
+  color: #000000a0;
+  font-size: 0.8em;
+}
+
+
+.school_name {
+  color: var(--neutral-900);
+  margin: 0px 7px 5px;
+  &.title {
+    font-weight: 700;
+    margin-bottom: 0;
+  }
+}
+.school_academic {
+  font-size: 0.8em;
+  font-weight: 400;
+}
+.school_address {
+  font-weight: 400;
+  font-size: 0.73em;
+  color: var(--neutral-900);
+}
+
+// <---------------- scrollbar style ------------------------------> //
+
+/* width */
+::-webkit-scrollbar {
+  width: 2px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  width: 3px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--primary-550);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: var(--primary-400);
 }
