--- a/src/variables.scss
+++ b/src/variables.scss
@@ -299,7 +299,7 @@
   --boxShadow-l-mid: 0px 0px 17px rgba(23, 26, 31, 0.23), 0px 0px 2px rgba(23, 26, 31, 0.2);
   --boxShadow-xl: 0px 22.5px 46.5px rgba(23, 26, 31, 0.33), 0px 0px 2px rgba(23, 26, 31, 0.2);
   --boxShadow-xl-mid: 0px 0px 35px rgba(23, 26, 31, 0.32), 0px 0px 2px rgba(23, 26, 31, 0.2);
-
+  --border-light: 1px solid rgba(189, 174, 174, 0.47);
   // material variables
   --mat-form-field-container-height: 30px;
   --mat-form-field-container-vertical-padding: 8px;
