--- a/src/app/core/components/layout/layout.component.html
+++ b/src/app/core/components/layout/layout.component.html
@@ -1,4 +1,7 @@
 @let _profile = profile | async;
+@let schoolProfile = _profile?.schoolProfile;
+@let loggedInUser = _profile?.loggedInUser;
+
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav
     #drawer
@@ -10,24 +13,28 @@
     [opened]="(isHandset$ | async) === false"
   >
     <div class="d-flex flex-column align-items-center justify-content-center text-center">
-        <img
-          style="height: 4rem; margin: 1rem 0 0.5rem; width: 4rem; border-radius: 50%"
-          [src]="_profile?.schoolProfile?.logoUrl ? _profile?.schoolProfile?.logoUrl : 'assets/images/avatar_1.webp'"
-          [alt]="_profile?.schoolProfile?.name"
-        />
+      <img
+        style="height: 4rem; margin: 1rem 0 0.5rem; width: 4rem; border-radius: 50%"
+        [src]="schoolProfile?.logoUrl ? schoolProfile?.logoUrl : 'assets/images/avatar_1.webp'"
+        [alt]="schoolProfile?.name"
+      />
       <div [class.mobile_padding]="screenObserver.isMobile">
         <h6 class="school_name title">
-          {{ _profile?.schoolProfile?.name }}
+          {{ schoolProfile?.name }}
         </h6>
         <span class="school_address sub_title">
-          {{ _profile?.schoolProfile?.town }},
-          {{ _profile?.schoolProfile?.city }}
-          @if (_profile?.schoolProfile?.state) {
-            ({{ states[_profile?.schoolProfile?.state || ''] }})
+          {{ schoolProfile?.town }},
+          {{ schoolProfile?.city }}
+          @if (schoolProfile?.state) {
+            ({{ states[schoolProfile?.state || ''] }})
           }
         </span>
         <div>
-          <a class="editOrViewSchoolProfile" routerLink="./school-profile">Edit School Profile</a>
+          @if (loggedInUser?.role == 'admin') {
+            <a class="editOrViewSchoolProfile" routerLink="./school-profile">Edit School Profile</a>
+          } @else {
+            <a class="editOrViewSchoolProfile" routerLink="./school-profile">View School Profile</a>
+          }
         </div>
       </div>
     </div>
@@ -39,44 +46,13 @@
     }
 
     <div [ngStyle]="{ display: screenObserver.isMobile ? 'initial' : 'none' }">
-      <mat-nav-list class="p-0">
-        <a mat-list-item>
-          <div class="d-flex align-items-center nav_list">
-            <span class="material-symbols-outlined"> Logout </span>
-
-            <span class="pr-2"> Log Out </span>
-          </div>
-        </a>
-        <a mat-list-item>
-          <div class="d-flex align-items-center nav_list justify-content-between">
-            <div class="d-flex">
-              <span class="material-symbols-outlined"> dark_mode </span>
-              <span class="pr-2"> Night Mode </span>
-            </div>
-            <span class="pr-2">
-              <mat-slide-toggle></mat-slide-toggle>
-            </span>
-          </div>
-        </a>
-      </mat-nav-list>
+      <sc-menu [navItems]="logoutNavItems"></sc-menu>
       <div class="seperator my-2"></div>
-      <div class="d-flex profile_option">
-        <div class="col-2 d-flex align-items-center justify-content-center">
-          <span class="profile_name">
-            {{ _profile?.loggedInUser?.name?.slice(0, 1) }}
-          </span>
-        </div>
-        <div class="col-10">
-          <div class="d-flex justify-content-between py-3">
-            <b class="px-3">
-              {{ _profile?.loggedInUser?.name }}
-            </b>
+      <div class="d-flex profile_option ps-3">
+        <ng-container [ngTemplateOutlet]="profile_card"></ng-container>
+        <div class="d-flex justify-content-end w-100 py-3 pe-3">
+          <div class="user_profile_actions d-flex flex-column align-items-between">
             <mat-icon>edit</mat-icon>
-          </div>
-          <div class="d-flex justify-content-between">
-            <span class="px-3">
-              {{ _profile?.loggedInUser?.email }}
-            </span>
             <mat-icon>settings</mat-icon>
           </div>
         </div>
@@ -98,37 +74,29 @@
           <div class="profile_container d-flex justify-content-end p-1" [matMenuTriggerFor]="menu">
             <div class="profile d-flex flex-column text-end">
               <div class="profile_name">
-                {{ _profile?.loggedInUser?.name }}
+                {{ loggedInUser?.name }}
               </div>
               <div class="profile_email">
-                {{ _profile?.loggedInUser?.email }}
+                {{ loggedInUser?.email }}
               </div>
             </div>
-            <div class="avtar_container d-flex justify-content-center">
-              <img
-                [src]="
-                  _profile?.loggedInUser?.profileImageUrl
-                    ? _profile?.loggedInUser?.profileImageUrl
-                    : 'assets/images/avatar_1.webp'
-                "
-                #profileImage
-                (error)="profileImage.src = 'assets/images/avatar_1.webp'"
-                alt="user profile "
-              />
+            <div class="avtar_container d-flex justify-content-center align-items-center">
+              <ng-container [ngTemplateOutlet]="profile_name"></ng-container>
             </div>
-            <mat-menu #menu="matMenu">
-              <button mat-menu-item (click)="logOut()">
-                <mat-icon>logout</mat-icon>
-                <span>Log-out</span>
-              </button>
+            <mat-menu #menu="matMenu" class="nav_options_menu">
+              <div class="px-2">
+                <ng-container [ngTemplateOutlet]="profile_card"></ng-container>
+              </div>
+              <div class="seperator my-2"></div>
+              <sc-menu [navItems]="preferanceNavItems"></sc-menu>
+              <div class="seperator my-2"></div>
+              <sc-menu [navItems]="logoutNavItems"></sc-menu>
             </mat-menu>
           </div>
         } @else {
           <div></div>
           <div class="profile_icon">
-            <div>
-              {{ _profile?.loggedInUser?.name?.slice(0, 1) }}
-            </div>
+            <ng-container [ngTemplateOutlet]="profile_name"></ng-container>
           </div>
         }
       </div>
@@ -138,3 +106,30 @@
     </main>
   </mat-sidenav-content>
 </mat-sidenav-container>
+
+<ng-template #profile_name>
+  @if (loggedInUser?.profileImageUrl) {
+    <img
+      [src]="loggedInUser?.profileImageUrl"
+      #profileImage
+      (error)="profileImage.src = 'assets/images/avatar_1.webp'"
+      alt="user profile"
+      [title]="loggedInUser?.name"
+    />
+  } @else {
+    <div class="text-light" [title]="loggedInUser?.name">
+      {{ loggedInUser?.name?.slice(0, 1) }}
+    </div>
+  }
+</ng-template>
+<ng-template #profile_card>
+  <div class="d-flex align-items-center justify-content-center">
+    <div class="profile_name d-flex justify-content-center align-items-center">
+      <ng-container [ngTemplateOutlet]="profile_name"></ng-container>
+    </div>
+    <div class="profile_info d-flex flex-column ps-3">
+      <b> {{ loggedInUser?.name }} </b>
+      <span> {{ loggedInUser?.email }} </span>
+    </div>
+  </div>
+</ng-template>
