--- a/src/app/core/components/side-nav/side-nav.component.html
+++ b/src/app/core/components/side-nav/side-nav.component.html
@@ -10,56 +10,38 @@
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list class="pt-0">
       @for (item of naveItem; track i; let i = $index) {
-      <a
-        mat-list-item
-        [routerLink]="item.routerLink"
-        [routerLinkActive]="'router-link-active'"
-      >
-        <div class="d-flex align-items-center nav_list">
-          <span class="material-symbols-outlined">
-            {{ item.icon }}
-          </span>
+        <a mat-list-item [routerLink]="item.routerLink" [routerLinkActive]="'router-link-active'">
+          <div class="d-flex align-items-center nav_list">
+            <span class="material-symbols-outlined">
+              {{ item.icon }}
+            </span>
 
-          <span class="pr-2">
-            {{ item.label }}
-          </span>
-        </div>
-      </a>
+            <span class="pr-2">
+              {{ item.label }}
+            </span>
+          </div>
+        </a>
       }
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar color="primary">
       @if (isHandset$ | async) {
-      <button
-        type="button"
-        aria-label="Toggle sidenav"
-        mat-icon-button
-        (click)="drawer.toggle()"
-      >
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-      </button>
+        <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()">
+          <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+        </button>
       }
       <div class="d-flex w-100 justify-content-between">
         <div>School-Compass-365-fe</div>
-        <div
-          class="profile_container d-flex px-2 pr-0 py-1 justify-content-end"
-          [matMenuTriggerFor]="menu"
-        >
-          <div class="profile text-end d-flex flex-column">
-            <div class="profile_name">
-              {{ profile.firstName }} {{ profile.lastName }}
-            </div>
+        <div class="profile_container d-flex justify-content-end px-2 py-1 pr-0" [matMenuTriggerFor]="menu">
+          <div class="profile d-flex flex-column text-end">
+            <div class="profile_name">{{ profile.firstName }} {{ profile.lastName }}</div>
             <div class="profile_email">{{ profile.email }}</div>
           </div>
           <div class="d-flex align-items-center justify-content-center">
             <img
               style="height: 24px"
-              [src]="
-                profile?.avatar
-                  ? profile?.avatar
-                  : 'assets/images/avatar_1.webp'
-              "
+              [src]="profile?.avatar ? profile?.avatar : 'assets/images/avatar_1.webp'"
               alt="user profile "
             />
             <!-- <mat-icon>account_circle</mat-icon> -->
