--- a/src/app/modules/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/modules/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,9 +1,5 @@
 <sc-side-nav [naveItem]="navConfig">
   <sc-form [formConfig]="formConfig" #form></sc-form>
-  <sc-table
-    [config]="tableConfig"
-    [data]="tableData"
-    (buttonClick)="getButtonClick($event)"
-  ></sc-table>
+  <sc-table [config]="tableConfig" [data]="tableData" (buttonClick)="getButtonClick($event)"></sc-table>
   <router-outlet></router-outlet>
 </sc-side-nav>
