--- a/src/app/core/components/layout/layout.component.scss
+++ b/src/app/core/components/layout/layout.component.scss
@@ -109,11 +109,22 @@ mat-icon.toggle {
 .mobile_padding {
   padding: 0px 5rem;
 }
+.close_mobile_menu {
+  top: 0;
+  right: 0;
+  font-size: 1.5rem;
+  height: 2rem;
+  width: 2rem;
+}
 
 .profile_option {
-  mat-icon {
+  .user_profile_actions{
+    color: var(--primary-550);
     cursor: pointer;
-    color: #379ae6ff;
+    mat-icon {
+      width: 20px;
+      font-size: 1.1em;
+    }
   }
 
   .profile_name {
