--- a/src/variables.scss
+++ b/src/variables.scss
@@ -308,3 +308,6 @@
   --mdc-filled-text-field-focus-active-indicator-color: var(--primary-500);
   --mat-option-label-text-size: 0.8rem;
 }
+.mat-mdc-raised-button.mat-primary {
+  --mdc-protected-button-container-color: var(--primary-500) !important;
+}
