--- a/src/app/modules/admin/components/school-profile/school-profile.component.html
+++ b/src/app/modules/admin/components/school-profile/school-profile.component.html
@@ -1,4 +1,4 @@
-<section class="school_info_container d-flex justify-content-center flex-wrap py-4">
+<section class="school_info_container d-flex justify-content-center flex-wrap">
   <div class="col-md-6 d-flex flex-column align-items-center justify-content-center pb-4 text-center">
     <input type="file" hidden #school_logo (change)="uploadImage(school_logo)" />
     <div class="school_logo" (click)="school_logo.click()">
